# omataxonomy

./: pyproject.toml
.github/workflows/: run-tests.yml  upload-release.yml
docs/examples/: session.py
omataxonomy/: build_db.py  gtdb.py  query.py
taxonomy/: gtdb.py  mnemonic.py  query.py
tests/: test_doctests.py  test_taxonomy.py
