[tool.poetry]
name = "omataxonomy"
version = "0.3.2"
description = "Package to work with combined NCBI and GTDB taxonomy"
authors = ["Adrian Altenhoff <adrian.altenhoff@inf.ethz.ch>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ete4 = "^4.3.0"
numpy = "^2.0.0"
tqdm = "^4.64.1"
six = "^1.16.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.py'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
